--- a/src/FeedbackService/appsettings.json
+++ b/src/FeedbackService/appsettings.json
@@ -41,6 +41,20 @@
   "CheckTokenMiddleware": {
     "SkippedEndpoints": [
       "/apiinformation",
+
+      "/0F311A65-6DB1-47E8-A3AA-758A1DB86730/hc",
+
+      "/swagger",
+      "/swagger/index.html",
+      "/_framework/aspnetcore-browser-refresh.js",
+      "/swagger/swagger-ui-bundle.js",
+      "/swagger/swagger-ui-standalone-preset.js",
+      "/_framework/aspnetcore-browser-refresh.js",
+      "/_vs/browserLink",
+      "/swagger/swagger-ui.css",
+      "/swagger/2.0.2.0/swagger.json",
+      "/swagger/favicon-32x32.png",
+
       "/feedback/create"
     ]
   }
