--- a/src/FeedbackService/appsettings.Production.json
+++ b/src/FeedbackService/appsettings.Production.json
@@ -2,9 +2,16 @@
   "Serilog": {
   },
   "ConnectionStrings": {
-    "SQLConnectionString": "Server=dbFeedback-sql-server;User=sa;Password=Feedback_1234;Database=FeedbackDB;"
+    "SQLConnectionString": "Server=sqlserver_db;User=SA;Password=User_1234;Database=FeedbackDB;TrustServerCertificate=true"
   },
   "RabbitMQ": {
-    "Host": "lt_do_rabbitmq"
+    "Host": "rabbitmq",
+    "VirtualHost": "/"
+  },
+  "MemoryCache": {
+    "CacheLiveInMinutes": 30
+  },
+  "Redis": {
+    "CacheLiveInMinutes": 10
   }
 }
