--- a/Common.Configurations.targets
+++ b/Common.Configurations.targets
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <Project>
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<AssemblyName>UniversityHelper.$(MSBuildProjectName)</AssemblyName>
-		<RootNamespace>UniversityHelper.$(MSBuildProjectName)</RootNamespace>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <AssemblyName>UniversityHelper.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>UniversityHelper.$(MSBuildProjectName)</RootNamespace>
+  </PropertyGroup>
 
-	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>False</Optimize>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
-	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>False</Optimize>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
 
-	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>true</Optimize>
-		<DefineConstants>TRACE;RELEASE</DefineConstants>
-	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>true</Optimize>
+    <DefineConstants>TRACE;RELEASE</DefineConstants>
+  </PropertyGroup>
 
-	<PropertyGroup Condition="$(AssemblyName.Contains('.UnitTests'))">
-		<IsPackable>false</IsPackable>
-	</PropertyGroup>
+  <PropertyGroup Condition="$(AssemblyName.Contains('.UnitTests'))">
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
 
-	<ItemGroup Condition="$(AssemblyName.Contains('.UnitTests')) != 'true'">
-		<PackageReference Include="UniversityHelper.Core" Version="3.0.1" />
-		<PackageReference Include="UniversityHelper.Core.BrokerSupport" Version="3.0.1" />
-		<PackageReference Include="UniversityHelper.Models" Version="3.0.1" />
-		<PackageReference Include="UniversityHelper.Core.EFSupport" Version="3.0.1" />
-	</ItemGroup>
+  <ItemGroup Condition="!$(AssemblyName.Contains('.UnitTests'))">
+    <PackageReference Include="UniversityHelper.Core" Version="3.0.1" />
+    <PackageReference Include="UniversityHelper.Core.BrokerSupport" Version="3.0.1" />
+    <PackageReference Include="UniversityHelper.Core.EFSupport" Version="3.0.1" />
+    <PackageReference Include="UniversityHelper.Models" Version="3.0.1" />
+  </ItemGroup>
 
-	<ItemGroup Condition="$(AssemblyName.Contains('.UnitTests'))">
-		<PackageReference Include="UniversityHelper.UnitTestCore" Version="3.0.1" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-	</ItemGroup>
-
+  <ItemGroup Condition="$(AssemblyName.Contains('.UnitTests'))">
+    <PackageReference Include="UniversityHelper.UnitTestCore" Version="3.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
+  </ItemGroup>
 </Project>
