--- a/Common.Configurations.targets
+++ b/Common.Configurations.targets
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <Project>
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -26,18 +27,23 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
-  <ItemGroup Condition="!$(AssemblyName.Contains('.UnitTests'))">
+  <ItemGroup Condition="$(AssemblyName.Contains('.UnitTests')) != 'true'">
     <PackageReference Include="UniversityHelper.Core" Version="3.0.1" />
     <PackageReference Include="UniversityHelper.Core.BrokerSupport" Version="3.0.1" />
     <PackageReference Include="UniversityHelper.Core.EFSupport" Version="3.0.1" />
+    <PackageReference Include="UniversityHelper.Core.EndpointSupport" Version="3.0.1" />
+    <PackageReference Include="UniversityHelper.Core.ImageSupport" Version="3.0.1" />
+    <PackageReference Include="UniversityHelper.Core.RedisSupport" Version="3.0.1" />
     <PackageReference Include="UniversityHelper.Models" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup Condition="$(AssemblyName.Contains('.UnitTests'))">
-    <PackageReference Include="UniversityHelper.UnitTestCore" Version="3.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Moq.AutoMock" Version="2.3.0" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
+
 </Project>
