--- a/src/FeedbackService.Broker/FeedbackService.Broker.csproj
+++ b/src/FeedbackService.Broker/FeedbackService.Broker.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(ProjectDir)..\..\Common.Configurations.targets" />
 
   <ItemGroup>
-    <ProjectReference Include="..\CommunityService.Models.Db\FeedbackService.Models.Db.csproj" />
+    <ProjectReference Include="..\FeedbackService.Data\FeedbackService.Data.csproj" />
   </ItemGroup>
 
 </Project>
