--- a/src/FeedbackService.Data.Provider.MsSql.Ef/FeedbackService.Data.Provider.MsSql.Ef.csproj
+++ b/src/FeedbackService.Data.Provider.MsSql.Ef/FeedbackService.Data.Provider.MsSql.Ef.csproj
@@ -3,8 +3,8 @@
   <Import Project="$(ProjectDir)..\..\Common.Configurations.targets" />
 
   <ItemGroup>
-    <ProjectReference Include="..\CommunityService.Data.Provider\FeedbackService.Data.Provider.csproj" />
-    <ProjectReference Include="..\CommunityService.Models.Db\FeedbackService.Models.Db.csproj" />
+    <ProjectReference Include="..\FeedbackService.Data.Provider\FeedbackService.Data.Provider.csproj" />
+    <ProjectReference Include="..\FeedbackService.Models.Db\FeedbackService.Models.Db.csproj" />
   </ItemGroup>
 
   <ItemGroup>
