test skip endpoint

--- a/src/FeedbackService/appsettings.json
+++ b/src/FeedbackService/appsettings.json
@@ -71,7 +71,8 @@
       "/swagger/swagger-ui.css",
       "/swagger/2.0.2.0/swagger.json",
       "/swagger/favicon-32x32.png",
-      "/Feedback/create"
+
+      "/type/all"
     ]
   }
 }
