--- a/src/FeedbackService/appsettings.json
+++ b/src/FeedbackService/appsettings.json
@@ -55,24 +55,26 @@
   },
   "CheckTokenMiddleware": {
     "SkippedEndpoints": [
-      "/apiinformation",
+        "/apiinformation",
 
-      "/B322D740-6DBD-40C8-9B93-3F254AE0422A/hc",
+        "/B322D740-6DBD-40C8-9B93-3F254AE0422A/hc",
 
-      "/swagger",
-      "/swagger/index.html",
-      "/swagger/index.js",
-      "/swagger/index.css",
-      "/_framework/aspnetcore-browser-refresh.js",
-      "/swagger/swagger-ui-bundle.js",
-      "/swagger/swagger-ui-standalone-preset.js",
-      "/_framework/aspnetcore-browser-refresh.js",
-      "/_vs/browserLink",
-      "/swagger/swagger-ui.css",
-      "/swagger/2.0.2.0/swagger.json",
-      "/swagger/favicon-32x32.png",
+        "/swagger",
+        "/swagger/index.html",
+        "/swagger/index.js",
+        "/swagger/index.css",
+        "/_framework/aspnetcore-browser-refresh.js",
+        "/swagger/swagger-ui-bundle.js",
+        "/swagger/swagger-ui-standalone-preset.js",
+        "/_framework/aspnetcore-browser-refresh.js",
+        "/_vs/browserLink",
+        "/swagger/swagger-ui.css",
+        "/swagger/2.0.2.0/swagger.json",
+        "/swagger/favicon-32x32.png",
 
-      "/type/all"
+        "/type/all",
+        "/Feedback/create"
+
     ]
   }
 }
